[gd_scene load_steps=17 format=3 uid="uid://da0tj85jbubkg"]

[ext_resource type="Script" uid="uid://d3tfski4tp0e2" path="res://scripts/minijuegos/minijuegos conejo/minijuego_conejos_contrareloj.gd" id="1_8cbus"]
[ext_resource type="Texture2D" uid="uid://dhsgwhb3jqllb" path="res://sprites/minijuegos/minijuego de los conejos/fondo_minijuego.png" id="1_tr07t"]
[ext_resource type="Script" uid="uid://bixagsuptnooa" path="res://scripts/minijuegos/interfaz_minigame.gd" id="2_m78qi"]
[ext_resource type="Texture2D" uid="uid://cyfd816repg5o" path="res://sprites/minijuegos/paused_menu.png" id="2_nd3ci"]
[ext_resource type="FontFile" uid="uid://cv643mxnqxtot" path="res://sprites/interfaz/undertale-deltarune-text-font-extended.ttf" id="3_m78qi"]
[ext_resource type="Texture2D" uid="uid://djx0o33xtaodv" path="res://sprites/minijuegos/menu_interfaz.png" id="4_8cbus"]
[ext_resource type="Texture2D" uid="uid://cudw1dhxgq4a1" path="res://sprites/minijuegos/volver_boton_minijuegos_0001.png" id="5_w87no"]
[ext_resource type="Texture2D" uid="uid://capts0d0fov1x" path="res://sprites/minijuegos/volver_boton_minijuegos_0002.png" id="6_4pb8o"]
[ext_resource type="Texture2D" uid="uid://bw51h3ky2ir60" path="res://sprites/minijuegos/boton pausa_0001.png" id="7_sv1fk"]
[ext_resource type="Texture2D" uid="uid://c406telgcho4u" path="res://sprites/minijuegos/boton pausa_0002.png" id="8_op8j4"]
[ext_resource type="Texture2D" uid="uid://cddd2fry07gr6" path="res://sprites/minijuegos/continuar_boton_minijuegos_0001.png" id="9_1suu3"]
[ext_resource type="Texture2D" uid="uid://v7urx0qtw131" path="res://sprites/minijuegos/continuar_boton_minijuegos_0002.png" id="10_7vpxx"]
[ext_resource type="AudioStream" uid="uid://ce0c1psegbkvq" path="res://sonidos/pausar juego.mp3" id="12_8cbus"]
[ext_resource type="PackedScene" uid="uid://dh5q8els4l7cb" path="res://ecenas/minijuegos/martillo.tscn" id="14_w87no"]

[sub_resource type="Gradient" id="Gradient_w87no"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4pb8o"]
gradient = SubResource("Gradient_w87no")
width = 16
height = 16

[node name="minijuego_conejos_contrareloj" type="Node2D" groups=["minijuego_conejo"]]
script = ExtResource("1_8cbus")

[node name="FondoMinijuego" type="Sprite2D" parent="."]
position = Vector2(64, 64)
texture = ExtResource("1_tr07t")

[node name="interfaz_minigame" type="CanvasLayer" parent="."]
process_mode = 3
layer = 200
script = ExtResource("2_m78qi")

[node name="fondo_pausa" type="Node2D" parent="interfaz_minigame"]
visible = false

[node name="PausedMenu" type="Sprite2D" parent="interfaz_minigame/fondo_pausa"]
position = Vector2(64, 64)
texture = ExtResource("2_nd3ci")

[node name="texto pausa" type="Label" parent="interfaz_minigame/fondo_pausa"]
offset_left = 23.0
offset_top = 48.0
offset_right = 105.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("3_m78qi")
text = "PAUSADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuInterfaz" type="Sprite2D" parent="interfaz_minigame"]
position = Vector2(64, 64)
texture = ExtResource("4_8cbus")

[node name="volver" type="TouchScreenButton" parent="interfaz_minigame"]
position = Vector2(0, 109)
texture_normal = ExtResource("5_w87no")
texture_pressed = ExtResource("6_4pb8o")

[node name="pausa" type="TouchScreenButton" parent="interfaz_minigame"]
position = Vector2(96, 109)
texture_normal = ExtResource("7_sv1fk")
texture_pressed = ExtResource("8_op8j4")

[node name="continuar" type="TouchScreenButton" parent="interfaz_minigame"]
position = Vector2(96, 129)
texture_normal = ExtResource("9_1suu3")
texture_pressed = ExtResource("10_7vpxx")

[node name="tiempo" type="Label" parent="interfaz_minigame"]
offset_left = 42.0
offset_top = 110.0
offset_right = 86.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3_m78qi")
theme_override_font_sizes/font_size = 12
text = "11:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pausa sonido" type="AudioStreamPlayer" parent="interfaz_minigame"]
stream = ExtResource("12_8cbus")

[node name="collisiones de martillo" type="Node2D" parent="."]

[node name="martillo" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(7, 1)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo2" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(46, 1)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo3" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(85, 1)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo4" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(7, 38)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo5" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(46, 38)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo6" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(85, 38)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo7" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(7, 75)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo8" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(46, 75)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="martillo9" type="TouchScreenButton" parent="collisiones de martillo"]
position = Vector2(85, 75)
scale = Vector2(2.25, 2.25)
texture_normal = SubResource("GradientTexture2D_4pb8o")
texture_pressed = SubResource("GradientTexture2D_4pb8o")

[node name="posicion spawn" type="Marker2D" parent="."]
position = Vector2(25, 19)

[node name="posicion spawn2" type="Marker2D" parent="."]
position = Vector2(64, 19)

[node name="posicion spawn3" type="Marker2D" parent="."]
position = Vector2(103, 19)

[node name="posicion spawn4" type="Marker2D" parent="."]
position = Vector2(25, 56)

[node name="posicion spawn5" type="Marker2D" parent="."]
position = Vector2(64, 56)

[node name="posicion spawn6" type="Marker2D" parent="."]
position = Vector2(103, 56)

[node name="posicion spawn7" type="Marker2D" parent="."]
position = Vector2(25, 93)

[node name="posicion spawn8" type="Marker2D" parent="."]
position = Vector2(64, 93)

[node name="posicion spawn9" type="Marker2D" parent="."]
position = Vector2(103, 93)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="martillo" parent="." instance=ExtResource("14_w87no")]
z_index = 10
position = Vector2(153, 15)

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="released" from="interfaz_minigame/pausa" to="interfaz_minigame" method="_on_pausa_released"]
[connection signal="released" from="interfaz_minigame/continuar" to="interfaz_minigame" method="_on_continuar_released"]
[connection signal="pressed" from="collisiones de martillo/martillo" to="." method="_on_martillo_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo2" to="." method="_on_martillo_2_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo3" to="." method="_on_martillo_3_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo4" to="." method="_on_martillo_4_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo5" to="." method="_on_martillo_5_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo6" to="." method="_on_martillo_6_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo7" to="." method="_on_martillo_7_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo8" to="." method="_on_martillo_8_pressed"]
[connection signal="pressed" from="collisiones de martillo/martillo9" to="." method="_on_martillo_9_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_timer_5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_timer_6_timeout"]
